Fixed touch delay on mobile, added media queries to improve mobile readability

--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
 /* custom styles */
 .btnWrapper {
   padding: 15px;
@@ -93,4 +52,17 @@ a {
 
 .fc-daygrid-day-number {
   color: white !important;
+}
+
+@media only screen and (max-with:830px) {
+
+  .fc-toolbar-title {
+    font-size: 16px;
+    padding-left: 20px !important;
+    background-color: red;
+  }
+
+  .fc-header-toolbar .fc-toolbar {
+    font-size: 60px;
+  }
 }
